fix missing border in config window

--- a/src/main/resources/style/light.css
+++ b/src/main/resources/style/light.css
@@ -118,7 +118,7 @@
     -fx-background-color: -color-accent;
 }
 
-#configSplitPane {
+#configContainer {
     -fx-border-color: -color-foreground;
 }
 
