--- a/src/main/resources/style/night.css
+++ b/src/main/resources/style/night.css
@@ -114,7 +114,7 @@
     -fx-background-color: -color-accent;
 }
 
-#configSplitPane {
+#configContainer {
     -fx-border-color: -color-foreground;
 }
 
